[#10]fix: translation for achievement

--- a/MoneyTree/Resources/Localizable.xcstrings
+++ b/MoneyTree/Resources/Localizable.xcstrings
@@ -1205,7 +1205,7 @@
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "種一棵樹"
+            "value" : "第一棵樹"
           }
         }
       }
